--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -2,7 +2,8 @@
     <div class="form-row m-0 mb-2">
         <div class="form-group col-3 m-0 pl-0">
             <label for="validatorType{{ i }}{{ uniqId }}"
-                   class="sr-only">Typ*</label>
+                   class="sr-only"
+                   i18n>Typ*</label>
             <select class="custom-select"
                     [(ngModel)]="item.type"
                     (change)="switchType($event, i); modelChanged($event)"
@@ -10,17 +11,22 @@
                     id="validatorType{{ i }}{{ uniqId }}"
                     name="validatorType{{ i }}{{ uniqId }}"
                     required>
-                <option value="numeric">Numerisch</option>
-                <option value="text">Text</option>
-                <option value="regex">Regex</option>
-                <option value="expression">Bedingung</option>
+                <option value="numeric"
+                        i18n>Numerisch</option>
+                <option value="text"
+                        i18n>Text</option>
+                <option value="regex"
+                        i18n>Regex</option>
+                <option value="expression"
+                        i18n>Bedingung</option>
             </select>
         </div>
 
         <div class="form-group col-4 m-0"
              *ngIf="item.type === 'numeric' || item.type === 'text'">
             <label for="validatorMin{{ i }}{{ uniqId }}"
-                   class="sr-only">Minimaler Wert/Länge*</label>
+                   class="sr-only"
+                   i18n>Minimaler Wert/Länge*</label>
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.min"
@@ -28,6 +34,7 @@
                    [class.is-invalid]="!item.min && item.min !== 0 || item.min < 0"
                    id="validatorMin{{ i }}{{ uniqId }}"
                    name="validatorMin{{ i }}{{ uniqId }}"
+                   i18n-placeholder
                    placeholder="Minimaler Wert/Länge"
                    min="0"
                    max="10000"
@@ -37,7 +44,8 @@
         <div class="form-group col-4 m-0 pr-0"
              *ngIf="item.type === 'numeric' || item.type === 'text'">
             <label for="validatorMax{{ i }}{{ uniqId }}"
-                   class="sr-only">Maximaler Wert/Länge*</label>
+                   class="sr-only"
+                   i18n>Maximaler Wert/Länge*</label>
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.max"
@@ -45,6 +53,7 @@
                    [class.is-invalid]="!item.max && item.max !== 0 || item.max < 0 || item.min > item.max"
                    id="validatorMax{{ i }}{{ uniqId }}"
                    name="validatorMax{{ i }}{{ uniqId }}"
+                   i18n-placeholder
                    placeholder="Maximaler Wert/Länge"
                    min="0"
                    max="10000"
@@ -54,7 +63,8 @@
         <div class="form-group col-9 m-0 pr-0"
              *ngIf="item.type === 'regex'">
             <label for="validatorData{{ i }}{{ uniqId }}"
-                   class="sr-only">Regulärerausdruck*</label>
+                   class="sr-only"
+                   i18n>Regulärerausdruck*</label>
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.regex"
@@ -62,6 +72,7 @@
                    [class.is-invalid]="!item.regex"
                    id="validatorData{{ i }}{{ uniqId }}"
                    name="validatorData{{ i }}{{ uniqId }}"
+                   i18n-placeholder
                    placeholder="Regulärerausdruck z.B.: ^\d*$"
                    maxlength="200"
                    required>
@@ -70,7 +81,8 @@
         <div class="form-group col-4 m-0"
              *ngIf="item.type === 'expression'">
             <label for="validatorExpQuestion{{ i }}{{ uniqId }}"
-                   class="sr-only">Formularfeld*</label>
+                   class="sr-only"
+                   i18n>Formularfeld*</label>
             <select class="custom-select"
                     [(ngModel)]="item.question"
                     (change)="modelChanged($event)"
@@ -79,12 +91,13 @@
                     name="validatorExpQuestion{{ i }}{{ uniqId }}"
                     required>
                 <option value=""
-                        disabled>Formularfeld auswählen</option>
+                        disabled
+                        i18n>Formularfeld auswählen</option>
                 <option *ngFor="let question of questions; index as j"
                         value="{{ question.name }}">
                     {{ question.title }}
                 </option>
-                <option *ngFor="let variable of storage.model.calculatedValues; index as j"
+                <option *ngFor="let variable of model.calculatedValues; index as j"
                         value="{{ variable.name }}">
                     {{ '&#123;' + variable.name + '&#125;' }}
                 </option>
@@ -94,7 +107,8 @@
         <div class="form-group col-2 m-0"
              *ngIf="item.type === 'expression'">
             <label for="validatorExpOperator{{ i }}{{ uniqId }}"
-                   class="sr-only">Operator*</label>
+                   class="sr-only"
+                   i18n>Operator*</label>
             <select class="custom-select"
                     [(ngModel)]="item.operator"
                     (change)="switchValueType($event, i); modelChanged($event)"
@@ -102,10 +116,14 @@
                     id="validatorExpOperator{{ i }}{{ uniqId }}"
                     name="validatorExpOperator{{ i }}{{ uniqId }}"
                     required>
-                <option value="empty">Leer</option>
-                <option value="notempty">Nicht leer</option>
-                <option value="contains">Enthält</option>
-                <option value="notcontains">Enthält nicht</option>
+                <option value="empty"
+                        i18n>Leer</option>
+                <option value="notempty"
+                        i18n>Nicht leer</option>
+                <option value="contains"
+                        i18n>Enthält</option>
+                <option value="notcontains"
+                        i18n>Enthält nicht</option>
                 <option value="equal">=</option>
                 <option value="notequal">&lt;&gt;</option>
                 <option value="greater">&gt;</option>
@@ -113,16 +131,19 @@
                 <option value="greaterorequal">&gt;=</option>
                 <option value="lessorequal">&lt;=</option>
                 <option value="anyof"
-                        *ngIf="item.choices">Enthält mindestens eines</option>
+                        *ngIf="item.choices"
+                        i18n>Enthält mindestens eines</option>
                 <option value="allof"
-                        *ngIf="item.choices">Enthält alle</option>
+                        *ngIf="item.choices"
+                        i18n>Enthält alle</option>
             </select>
         </div>
 
         <div class="form-group col-3 m-0 pr-0"
              *ngIf="item.type === 'expression' && !(item.operator === 'empty' || item.operator === 'notempty')">
             <label for="validatorExpValueA{{ i }}{{ uniqId }}"
-                   class="sr-only">Wert oder Variabel %7Be1%7D</label>
+                   class="sr-only"
+                   i18n>Wert oder Variabel %7Be1%7D</label>
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.value"
@@ -131,6 +152,7 @@
                    [class.is-invalid]="!item.value"
                    id="validatorExpValueA{{ i }}{{ uniqId }}"
                    name="validatorExpValueA{{ i }}{{ uniqId }}"
+                   i18n-placeholder
                    placeholder="Wert oder Variabel {e1}"
                    maxlength="200"
                    required>
@@ -156,6 +178,7 @@
 <div class="mb-2">
     <button type="button"
             class="btn btn-danger btn-sm mr-2"
+            i18n-title
             title="Validator entfernen"
             (click)="ValidatorDel()">
         <svg width="1em"
@@ -169,10 +192,12 @@
             <path fill-rule="evenodd"
                   d="M3.5 8a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.5-.5z" />
         </svg>
-        <span class="sr-only">Validator entfernen</span>
+        <span class="sr-only"
+              i18n>Validator entfernen</span>
     </button>
     <button type="button"
             class="btn btn-success btn-sm"
+            i18n-title
             title="Validator hinzufügen"
             (click)="ValidatorAdd()">
         <svg width="1em"
@@ -188,7 +213,8 @@
             <path fill-rule="evenodd"
                   d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
         </svg>
-        <span class="sr-only">Validator hinzufügen</span>
+        <span class="sr-only"
+              i18n>Validator hinzufügen</span>
     </button>
 </div>
 
@@ -196,7 +222,8 @@
 
 <div class="form-group row m-0 mb-3">
     <label for="validatorDefault"
-           class="col-12 col-lg-4 col-form-label px-0">Standard Validator hinzufügen</label>
+           class="col-12 col-lg-4 col-form-label px-0"
+           i18n>Standard Validator hinzufügen</label>
     <div class="col-12 col-lg-8 p-0">
         <select class="custom-select"
                 (change)="selectDefaultValidator($event)"
@@ -204,9 +231,12 @@
                 required>
             <option value=""
                     selected
-                    disabled>Validator Auswählen</option>
-            <option value="date2">Datum (yyyy-mm-dd)</option>
-            <option value="date1">Datum (dd.mm.yyyy)</option>
+                    disabled
+                    i18n>Validator Auswählen</option>
+            <option value="date2"
+                    i18n>Datum (yyyy-mm-dd)</option>
+            <option value="date1"
+                    i18n>Datum (dd.mm.yyyy)</option>
         </select>
     </div>
 </div>
