--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -72,7 +72,7 @@
                     </select>
                     <small id="form-localeHelp"
                            class="form-text text-muted"
-                           i18n>Die Standardsprache welche dem Benutzer angezeigt wird. Der Benutzer hat die Möglichkeit
+                           i18n>Die Standardsprache, welche dem Benutzer angezeigt wird. Der Benutzer hat die Möglichkeit
                         die Sprache zu wechseln.</small>
                 </div>
 
