--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -712,7 +712,7 @@
                 </div>
 
                 <hr>
-                <span i18n>Generische Antwortbedingungen</span>
+                <span i18n>Generische Sichtbarkeitsbedingung für die Antworten</span>
                 <br>
                 <small id="activationCondition-nameHelp"
                 class="text-muted">
