--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -7,14 +7,14 @@
             <ng-template ngbPanelHeader>
                 <div>
                     <div *ngIf="!adresse" class="text-center">
-                        <h5 class="m-0 mx-center">Wählen Sie eine Position</h5>
+                        <h5 class="m-0 mx-center" i18n>Wählen Sie eine Position</h5>
                     </div>
                     <div *ngIf="adresse" class="text-center">
                         <h5 class="m-0 mx-center">{{adresse.properties.text}}
                             <button type="button" (click)="map.classList.toggle('small')" class="btn btn-link p-0">
                                 <img src="{{ detailArrow ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
                                      width="25" height="25"
-                                     alt="Einklappen/ausklappen"
+                                     alt="Einklappen/ausklappen" i18n-alt
                                      (click)="toggleDetailArrow()">
                             </button>
                         </h5>
