--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -7,12 +7,24 @@
     </div>
     <div class="card-body">
         <dl class="row">
-            <dt class="col-md-5" i18n>{{'Art der Nutzung' | hyphenate}}</dt>
-            <dd class="col-md-7">{{feature.properties.nutzung | nutzung | hyphenate}}</dd>
-            <dt class="col-md-5" i18n>{{'Bodenrichtwert' | hyphenate}}</dt>
-            <dd class="col-md-7">{{feature.properties.brw | number}} &euro; / m&#178;</dd>
-            <dt class="col-md-5" *ngIf="feature.properties.beit" i18n>{{'Beitragsabgabenrechtlicher Zustand' | hyphenate}}</dt>
-            <dd class="col-md-7" *ngIf="feature.properties.beit">{{feature.properties.beit | beitrag | hyphenate}}</dd>
+            <dt class="col-md-5">
+                <span i18n>Art der Nutzung</span>
+            </dt>
+            <dd class="col-md-7">
+                {{feature.properties.nutzung | nutzung | hyphenate}}
+            </dd>
+            <dt class="col-md-5">
+                <span i18n>Bodenrichtwert</span>
+            </dt>
+            <dd class="col-md-7">
+                {{feature.properties.brw | number}} &euro; / m&#178;
+            </dd>
+            <dt class="col-md-5" *ngIf="feature.properties.beit">
+                <span i18n>Beitragsabgabenrechtlicher Zustand</span>
+            </dt>
+            <dd class="col-md-7" *ngIf="feature.properties.beit">
+                {{feature.properties.beit | beitrag | hyphenate}}
+            </dd>
         </dl>
     </div>
 </div>
