--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -8,12 +8,12 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/bodenrichtwerte']"
                    i18n>BORIS.NI</a>
-                <p class="h6"
-                   i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</p>
-                <p class="lead text-justify"
-                   i18n>{{ 'Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte' +
-                    ' in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
-                    ' für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
+                <p class="h6">
+                    <span i18n>Bodenrichtwertinformationssystem Niedersachsen</span>
+                </p>
+                <p class="lead text-justify">
+                    <span i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft zur Verfügung.</span>
+                </p>
             </div>
         </div>
     </div>
@@ -23,13 +23,12 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>NIPIX</a>
-                <p class="h6"
-                   i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</p>
-                <p class="lead text-justify"
-                   i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
-                    ' Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
-                    ' „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
-                    ' Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
+                <p class="h6">
+                    <span i18n>Niedersächsischer Immobilienpreisindex</span>
+                </p>
+                <p class="lead text-justify">
+                    <span i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</span>
+                </p>
             </div>
         </div>
         <div class="col-lg-3 pr-lg-0 pr-0 pl-0 order-lg-last order-first">
@@ -45,10 +44,8 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>Online Formulare</a>
-                <p class="lead text-justify pt-3"
-                   i18n>
-                    {{ 'Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden. ' +
-                   'Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.' | hyphenate }}
+                <p class="lead text-justify pt-3">
+                    <span i18n>Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden. Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.</span>
                 </p>
                 <form #pinFormular="ngForm"
                       i18n-aria-label
@@ -111,12 +108,12 @@
             <hr class="my-4">
         </div>
         <div class="col-lg-6">
-            <h5>{{ 'Immobilienmarktbericht 2020' | hyphenate }} </h5>
-            <a>{{ 'Eine Dekade steigender Preise in Niedersachsen...' | hyphenate }}</a>
+            <h5><span i18n>Immobilienmarktbericht 2020</span></h5>
+            <a><span i18n>Eine Dekade steigender Preise in Niedersachsen...</span></a>
         </div>
         <div class="col-lg-6">
-            <h5>{{ 'Bodenrichtwerte 2021' | hyphenate }} </h5>
-            <a>{{ 'Die neuen Bodenrichtwerte sind jetzt verfügbar...' | hyphenate }}</a>
+            <h5><span i18n>Bodenrichtwerte 2021</span></h5>
+            <a><span i18n>Die neuen Bodenrichtwerte sind jetzt verfügbar...</span></a>
         </div>
     </div>
 </div>
